<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/relative_style">

    <TextView
        style="@style/text_view_style"
        android:text="@string/now_playing_text" />

    <Button
        android:id="@+id/main_act"
        style="@style/button_style"
        android:text="@string/main_activity" />

    <Button
        android:id="@+id/playlists_2"
        style="@style/button_style"
        android:layout_alignParentBottom="true"
        android:text="@string/playlists" />

    <Button
        android:id="@+id/artist_screen_2"
        style="@style/button_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/artist_screen" />

    <Button
        android:id="@+id/search_2"
        style="@style/button_style"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_screen" />

</RelativeLayout>